--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/wym
+spring.datasource.username=root
+spring.datasource.password=ajsucks
+spring.jpa.open-in-view=true
