Converting to Thymeleaf

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Security -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -53,9 +54,10 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Thymeleaf -->
 		<dependency>
-			<groupId>org.apache.tomcat.embed</groupId>
-			<artifactId>tomcat-embed-jasper</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 	</dependencies>
 
