--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,8 @@ spring.datasource.url=jdbc:mysql://25.83.79.56:3306/wym
 spring.datasource.username=root
 spring.datasource.password=ajsucks
 
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
 spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=update
